--- a/src/chuk_mcp_remotion/generator/templates/CodeBlock.tsx.j2
+++ b/src/chuk_mcp_remotion/generator/templates/CodeBlock.tsx.j2
@@ -175,7 +175,7 @@ export const CodeBlock: React.FC<CodeBlockProps> = ({
       }}
     >
       <Highlight
-        theme={themes.vsDark}
+        theme={themes.nightOwl}
         code={code}
         language={language as any}
       >
