--- a/src/chuk_mcp_remotion/generator/templates/TypingCode.tsx.j2
+++ b/src/chuk_mcp_remotion/generator/templates/TypingCode.tsx.j2
@@ -139,7 +139,7 @@ export const TypingCode: React.FC<TypingCodeProps> = ({
       }}
     >
       <Highlight
-        theme={themes.nightOwl}
+        theme={themes.vsDark}
         code={displayedCode}
         language={language as any}
       >
